fix(tooltip): force wrapping with hyphens

--- a/1st-gen/packages/tooltip/src/spectrum-tooltip.css
+++ b/1st-gen/packages/tooltip/src/spectrum-tooltip.css
@@ -92,6 +92,7 @@
     font-weight: var(--mod-tooltip-font-weight, var(--spectrum-tooltip-font-weight));
     line-height: var(--mod-tooltip-line-height, var(--spectrum-tooltip-line-height));
     overflow-wrap: break-word;
+    hyphens: auto;
     -webkit-font-smoothing: antialiased;
     cursor: default;
     -webkit-user-select: none;
